apps/base/auth-openldap/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
spec:
  type: LoadBalancer
  loadBalancerIP: 1.2.3.4
  externalTrafficPolicy: Local
  ports:
  - port: 389
    name: ldap
    targetPort: ldap
  - port: 636
    name: ldaps
    targetPort: ldaps
  selector:
    app.kubernetes.io/component: openldap
    app.kubernetes.io/name: openldap
