apps/base/auth-openldap/deploy/networkPolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-openldap
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/component: openldap
      app.kubernetes.io/name: openldap

  ingress:
    # Allow ldap(s) from all
    - ports:
        - port: ldap
        - port: ldaps
